perf: update micro benchmark on lsm vector to use panama vector opt